# lgeometric

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
include/: lgeometric.hpp
include/Lgeometric/: ClosestPoints.hpp  Point2D.hpp  distances.hpp
tests/: CMakeLists.txt  main.cpp  test_distances.cpp  test_point2d.cpp
